--- a/src/components/sections/CaseStudy.css
+++ b/src/components/sections/CaseStudy.css
@@ -15,6 +15,8 @@
   align-items: flex-start;
   margin-bottom: 3rem;
   flex-wrap: wrap;
+  background-color: #ffffff;
+  border-radius: 12px;
 }
 
 .case-study-left {
@@ -38,6 +40,7 @@
 
 .case-study-right {
   padding-top: 3%;
+  padding-right: 3%;
   flex: 1 1 400px;
   min-width: 300px;
 }
