--- a/src/components/sections/CallToActionSection.css
+++ b/src/components/sections/CallToActionSection.css
@@ -96,6 +96,7 @@
   .cta-buttons {
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
   }
   
   .cta-button {
@@ -105,7 +106,9 @@
   }
   
   .cta-divider {
-    order: -1;
+    text-align: center;
+    width: 100%;
+    margin: 0.5rem 0;
   }
 }
 
