--- a/src/components/sections/HeroSection.css
+++ b/src/components/sections/HeroSection.css
@@ -198,7 +198,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .form-container {
     padding: 1.25rem;
     margin: 0 0.75rem;
@@ -228,4 +228,50 @@
     font-size: 0.75rem;
     line-height: 1.4;
   }
+.social-proof-container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+.service-text {
+  font-size: 12px;
+  color: #49484D;
+  padding-right: 0px !important;
+  margin-bottom: 8px;
+}
+.active-members {
+  font-size: 16px;
+  font-weight: 600;
+  color: #49484D;
+}
+.social-proof-text {
+  padding-left: 0.1rem;
+  padding-bottom: 8px;
+}
+.main-heading {
+  font-size: 28px;
+  font-weight: 400;
+  font-family: 'Gilroy-Bold', sans-serif;
+  line-height: 1.2;
+  color: #1f2937;
+}
+.sub-heading {
+  font-size: 18px;
+  color: #49484D;
+  font-weight: 400;
+  line-height: 100%;
+  margin-top: 8px;
+}
+.content-container {
+  position: relative;
+  margin: 0 auto;
+  padding: 6rem 1rem;
+  height: 872px;
+}
+.hero-section {
+  position: relative;
+  overflow: hidden;
+  max-height: 872px;
+}
+
 }
