--- a/src/components/sections/OceanviewCaseStudy.css
+++ b/src/components/sections/OceanviewCaseStudy.css
@@ -339,6 +339,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .oceanview-case-study-left {
+    flex: 1 1 400px;
+    min-width: 100%;
+    max-width: 500px;
+  }
   .oceanview-case-study-section {
     padding: 3rem 0;
   }
@@ -370,7 +375,7 @@
   }
   
   .oceanview-case-study-results {
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
   }
   
@@ -379,20 +384,3 @@
   }
 }
 
-@media screen and (max-width: 480px) {
-  .oceanview-case-study-main-title {
-    font-size: 24px;
-  }
-  
-  .oceanview-transforming-title {
-    font-size: 18px;
-  }
-  
-  .oceanview-case-study-item-title {
-    font-size: 16px;
-  }
-  
-  .oceanview-case-study-item-text {
-    font-size: 13px;
-  }
-}
