--- a/src/components/sections/PropaneBenefitsSection.css
+++ b/src/components/sections/PropaneBenefitsSection.css
@@ -133,8 +133,15 @@
     max-width: none;
   }
   
+  .propane-benefits-right {
+    width: 100%;
+    justify-content: center;
+  }
+  
   .propane-benefits-image-container {
-    height: 300px;
+    height: 450px;
+    width: 100%;
+    max-width: 100%;
   }
   
   .propane-benefits-title {
@@ -164,29 +171,3 @@
   }
 }
 
-@media screen and (max-width: 480px) {
-  .propane-benefits-title {
-    font-size: 24px;
-  }
-  
-  .propane-benefits-description {
-    font-size: 15px;
-  }
-  
-  .propane-benefit-item {
-    gap: 0.75rem;
-  }
-  
-  .propane-benefit-icon {
-    width: 36px;
-    height: 36px;
-  }
-  
-  .propane-benefit-title {
-    font-size: 16px;
-  }
-  
-  .propane-benefit-description {
-    font-size: 14px;
-  }
-}
