--- a/src/components/sections/ReadyToExperience.css
+++ b/src/components/sections/ReadyToExperience.css
@@ -85,21 +85,8 @@
     width: 100%;
     max-width: 320px;
     padding: 0.875rem 1.5rem;
-    font-size: 15px;
+    font-size: 16px;
+    font-weight: 600;
   }
 }
 
-@media screen and (max-width: 480px) {
-  .ready-to-experience-title {
-    font-size: 24px;
-  }
-  
-  .ready-to-experience-description {
-    font-size: 15px;
-  }
-  
-  .ready-to-experience-button {
-    padding: 0.75rem 1.25rem;
-    font-size: 14px;
-  }
-}
